--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  background-color:ghostwhite;
+  background-color:palegreen;
+ 
+
+
+  
 }
 .title {
   color: green;
   text-align: center;
+ 
 }
 .section-title{
     color: orange;
@@ -35,11 +40,13 @@ body {
 }
 .divishion-title{
     text-align: center;
+    color: orange;
 }
 .size{
-    width: 230px;
-    box-shadow: 10px 10px 20px seagreen;
+    width: 330px;
+    box-shadow: 10px 10px 20px plum;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 .Dhaka img{
     width: 100%;
