--- a/style.css
+++ b/style.css
@@ -2,27 +2,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  background-color:palegreen;
- 
-
-
-  
+  background-color: palegreen;
 }
 .title {
   color: green;
   text-align: center;
- 
 }
-.section-title{
-    color: orange;
+.section-title {
+  color: orange;
 }
 .parent {
   display: flex;
   width: 75%;
   margin: 0 auto;
 }
-.left p{
-    text-align: justify;
+.left p {
+  text-align: justify;
 }
 .photo img {
   width: 240px;
@@ -34,31 +29,33 @@ body {
   border-radius: 6px;
 }
 
-.divishons{
-    display: flex;
-    justify-content: space-around;
+.divishons {
+  display: flex;
+  justify-content: space-around;
 }
-.divishion-title{
-    text-align: center;
-    color: orange;
+.divishion-title {
+  text-align: center;
+  color: orange;
 }
-.size{
-    width: 330px;
-    box-shadow: 10px 10px 20px plum;
-    border-radius: 10px;
-    margin-bottom: 20px;
+.size {
+  width: 330px;
+  box-shadow: 10px 10px 20px plum;
+  border-left: 8px solid crimson;
+  border-radius: 10px;
+  margin-bottom: 20px;
+
 }
-.Dhaka img{
-    width: 100%;
+.Dhaka img {
+  width: 100%;
 }
 
-.Rajshahi img{
-    width: 100%;
+.Rajshahi img {
+  width: 100%;
 }
 
-.Sylhet img{
-    width: 100%;
+.Sylhet img {
+  width: 100%;
 }
-.box-text{
-    padding: 15px ;
+.box-text {
+  padding: 15px;
 }
